# yemek

./: .gitignore  .local.env  Cargo.toml  README.md  home.css  home.html  index.css  index.html  package.json  popup.css  popup.html
client/: home.html  index.html  package-lock.json  package.json  recipe.css  recipe.html  style.css
client/pages/: index.html  recipe.html
client/scripts/: index.js
client/server/: index.js
client/server/mock-data/: recipes.js
client/styles/: style.css
server/: package-lock.json  package.json  tsconfig.json
server/src/: app.ts
server/src/routes/: project.ts  static.ts
sql/: recipe.sql
src/: main.rs
src/controllers/: mod.rs
