[package]
name = "actix-web-static-files-boilerplate"
version = "0.1.0"
authors = ["Mehmet Sefa Balık <mehmetsefa2644@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.4.1"
log = "0.4"
dotenv = "0.15.0"
