[package]
name = "nepiser"
version = "0.1.0"
authors = ["Mehmet Sefa Balık <mehmetsefa2644@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.4.1"
log = "0.4"
env_logger = "0.8.2"
dotenv = "0.15.0"
mime = "0.3.16"
